# cloudevents-pretty-print

./: Cargo.toml  LICENSE  Makefile.toml  README.md
.github/workflows/: publish.yaml  test.yaml
src/: alloc.rs  lib.rs  pp.rs  wasm.rs
src/test/: example-ce.json  example-ce.txt  malformed-ce.json
