[package]
name = "cloudevents-pretty-print"
version = "0.1.0"
authors = ["Chris Suszyński <@cardil>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cloudevents-sdk = "0.7.0"
serde_json = "1.0.64"
wasm-bindgen = "0.2.63"
chrono = "0.4.19"
indent = "0.1.1"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
indoc = "2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
