[package]
name = "cloudevents-pretty-print"
version = "0.1.0"
authors = ["Chris Suszyński <@cardil>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cloudevents-sdk = "^0.7"
serde_json = "^1.0"
chrono = "^0.4"
indent = "^0.1"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
indoc = "^2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
